--- a/src/main/resources/templates/messenger/view.html
+++ b/src/main/resources/templates/messenger/view.html
@@ -60,7 +60,7 @@
     var userId = document.getElementById('userId').value;    
     var chatRoomDiv = document.getElementById('chatroom');
     var currentChatRoomSubscription = null;
-
+    var currentSendMessageSubscription = null;
 
     // 웹소켓 관련 function
     function connect() {
@@ -70,12 +70,8 @@
             function (frame) {
                 console.log('Connected: ' + frame);
                 // 채팅방 리스트 가져오기 구독
-                stompClient.subscribe('/topic/chatRoomList', function (chatRoomList) {
+                stompClient.subscribe('/topic/chatRoomList/' + userId, function (chatRoomList) {
                     showChatRoomList(JSON.parse(chatRoomList.body)); // 결과 값을 받으면 function 실행
-                });
-                // 채팅 보내기 구독
-                stompClient.subscribe('/topic/sendMessage', function (message) {
-                    addChatElement(JSON.parse(message.body)); 
                 });
                 initChatRoomList();
             }
@@ -116,13 +112,20 @@
 
     function getChatRoom(clickedId) {
         chatRoomId = clickedId;
-        // 기존에 구독된 채팅방 구독 해제 (있는 경우)
+        // 기존에 구독된 채팅방 구독 해제 및 신규 구독
         if (currentChatRoomSubscription) {
             currentChatRoomSubscription.unsubscribe();
         }
-        // 새로운 채팅방 구독 설정
         currentChatRoomSubscription = stompClient.subscribe('/topic/chatRoom/' + chatRoomId, function (messages) {
             showChatRoom(JSON.parse(messages.body));
+        });
+
+        // 채팅 보내기 구독 해제 및 신규 구독
+        if (currentSendMessageSubscription) {
+            currentSendMessageSubscription.unsubscribe();
+        }
+        currentSendMessageSubscription = stompClient.subscribe('/topic/sendMessage/' + chatRoomId, function (message) {
+            addChatElement(JSON.parse(message.body)); 
         });
 
         // 메시지 목록 요청
