--- a/src/main/resources/static/css/main/messenger.css
+++ b/src/main/resources/static/css/main/messenger.css
@@ -88,18 +88,79 @@ body {
     background-color: #0056b3;
 }
 
+
+/*채팅 메시지 관련*/
+.chat-message {
+    max-width: 60%;
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 15px;
+    color: white;
+    word-wrap: break-word;
+    position: relative;
+}
+
+.message-sender {
+    font-size: 0.8em;
+    color: #757575;
+    margin-bottom: 5px;
+}
+
+.message-text {
+    color: black;
+    right: 10px;
+}
+
+.message-status {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 0.7em;
+    color: #909090;
+}
+
+.my-message {
+    background-color: #FFEB3B; /* 자신의 메시지 배경색 */
+    margin-left: auto;
+    border-bottom-right-radius: 0;
+}
+
+.my-message .message-status {
+    left: -12px; /* 본인 메시지에서는 말풍선 왼쪽에 위치 */
+}
+
+.other-message {
+    background-color: #E0E0E0; /* 상대방의 메시지 배경색 */
+    margin-right: auto;
+    border-bottom-left-radius: 0;
+}
+
+.other-message .message-status {
+    right: -12px; /* 상대방 메시지에서는 말풍선 오른쪽에 위치 */
+}
+
+
+/*스크롤 버튼 관련*/
 .scroll-to-bottom {
     display: none;
     position: absolute; /* Change to absolute positioning */
     right: 50%; /* Position it in the middle horizontally */
     bottom: 15%;
-    transform: translateX(50%); /* Adjust its position to truly center it */
     padding: 10px 15px;
+
+    width: 50px; /* 버튼의 크기 */
+    height: 50px; /* 버튼의 크기 */
+    border-radius: 50%; /* 원 모양으로 만들기 */
+    transform: translateX(50%); /* Adjust its position to truly center it */
     background-color: #f0f0f0; /* Lighter background color */
     color: #007bff; /* Blue text color to match the button */
     border: 1px solid #e0e0e0; /* Add a border */
-    border-radius: 5px;
+    opacity: 0.6;
+
     cursor: pointer;
+    text-align: center;
+    font-size: 20px; /* 화살표 아이콘 크기 */
+
     transition: background-color 0.3s ease; /* Smooth transition for hover effect */
 }
 
@@ -109,10 +170,10 @@ body {
 
 .scroll-to-bottom:hover {
     background-color: #d0d0d0; /* Slightly darker on hover */
+    opacity: 1;
 }
 
 /* Optional: Add an icon (like an arrow) or specific text */
 .scroll-to-bottom::before {
     content: '↓'; /* Example: Downward arrow */
-    margin-right: 5px;
 }
