메신저 이름 수정

--- a/src/main/resources/templates/messenger/view.html
+++ b/src/main/resources/templates/messenger/view.html
@@ -17,7 +17,7 @@
 <main>
     <div class="messenger-container">
         <div class="messenger-title">
-            <h1>Chat Room List</h1>
+            <h1>Culture Stay Messenger</h1>
             <input type="hidden" id="userId" th:value="${userId}"></input>
         </div>
 
