메신저 멤버 검색 modal 추가

--- a/src/main/resources/templates/messenger/view.html
+++ b/src/main/resources/templates/messenger/view.html
@@ -7,8 +7,6 @@
     <script src="https://cdn.jsdelivr.net/npm/stomp-websocket/lib/stomp.min.js"></script>
 
     <link rel="stylesheet" th:href="@{/css/main/messenger.css}">
-
-
 </head>
 <body>
 
@@ -23,10 +21,22 @@
 
         <div class="messenger-content">
             <div class="chatRoomList-container">
+                <!-- 대화 상대 검색 버튼 -->
+                <button id="searchUserButton">대화 상대 검색</button>
+
+                <!-- 모달 창 -->
+                <div id="searchUserModal" class="modal">
+                    <div class="modal-content">
+                        <span class="close">&times;</span>
+                        <input type="text" id="searchUserInput" placeholder="사용자 검색"/>
+                        <button id="searchUserSubmit">검색</button>
+                        <div id="searchResult"></div>
+                    </div>
+                </div>
+
                 <div id="chatRoomList">
 
                 </div>
-                <a href="#">Create New Chat Room</a> <!-- 새로운 채팅룸 생성 링크 -->
             </div>
 
             <div class="chatroom-container">
@@ -52,179 +62,6 @@
 
 <footer th:replace="layouts/footer::footer"></footer>
 
-<script>
-    var scrollToBottomButton = document.getElementById('scrollToBottom');
-
-    var stompClient = null;
-    var chatRoomId = null;
-    var userId = document.getElementById('userId').value;    
-    var chatRoomDiv = document.getElementById('chatroom');
-    var currentChatRoomSubscription = null;
-    var currentSendMessageSubscription = null;
-
-    // 웹소켓 관련 function
-    function connect() {
-        var socket = new SockJS('/chat');
-        stompClient = Stomp.over(socket);
-        stompClient.connect({},
-            function (frame) {
-                console.log('Connected: ' + frame);
-                // 채팅방 리스트 가져오기 구독
-                stompClient.subscribe('/topic/chatRoomList/' + userId, function (chatRoomList) {
-                    showChatRoomList(JSON.parse(chatRoomList.body)); // 결과 값을 받으면 function 실행
-                });
-                initChatRoomList();
-            }
-        );
-    }
-
-    function initChatRoomList(){
-        var userId = document.getElementById('userId').value;
-        stompClient.send("/app/getChatRoomList", {}, JSON.stringify({
-                'userId': userId
-            })
-        );
-    }
-
-
-    function showChatRoomList(chatRoomData) {
-        var chatRoomsDiv = document.getElementById('chatRoomList');
-        chatRoomsDiv.innerHTML = ''; // 기존 리스트를 초기화
-
-        chatRoomData.forEach(function(chatRoom) {
-            var chatRoomElement = document.createElement('li');
-            var chatRoomLink = document.createElement('a');
-            chatRoomLink.href = '#'; // 페이지 이동을 방지하기 위해 '#' 사용
-            chatRoomLink.textContent = chatRoom.chatRoomName;
-            chatRoomLink.setAttribute('data-chatRoomId', chatRoom.chatRoomId);
-
-            // 클릭 이벤트 리스너 추가
-            chatRoomLink.addEventListener('click', function(event) {
-                event.preventDefault(); // 링크의 기본 동작(페이지 이동)을 방지
-                var chatRoomId = this.getAttribute('data-chatRoomId');
-                getChatRoom(chatRoomId);
-            });
-
-            chatRoomElement.appendChild(chatRoomLink);
-            chatRoomsDiv.appendChild(chatRoomElement);
-        });
-    }
-
-    function getChatRoom(clickedId) {
-        chatRoomId = clickedId;
-        // 기존에 구독된 채팅방 구독 해제 및 신규 구독
-        if (currentChatRoomSubscription) {
-            currentChatRoomSubscription.unsubscribe();
-        }
-        currentChatRoomSubscription = stompClient.subscribe('/topic/chatRoom/' + chatRoomId, function (messages) {
-            showChatRoom(JSON.parse(messages.body));
-        });
-
-        // 채팅 보내기 구독 해제 및 신규 구독
-        if (currentSendMessageSubscription) {
-            currentSendMessageSubscription.unsubscribe();
-        }
-        currentSendMessageSubscription = stompClient.subscribe('/topic/sendMessage/' + chatRoomId, function (message) {
-            addChatElement(JSON.parse(message.body)); 
-        });
-
-        // 메시지 목록 요청
-        stompClient.send("/app/getMessages", {}, JSON.stringify({
-                'chatRoomId': chatRoomId,
-                'userId': userId
-            })
-        );
-    }
-
-    function showChatRoom(messages) {
-        chatRoomDiv.innerHTML = ''; // 기존 리스트를 초기화
-
-        messages.forEach(function(message) {
-            addChatElement(message)
-        });
-    }
-
-    // isRead 확인을 위한 새로고침
-    var chatContainer = document.querySelector('.chatroom-container');
-    chatContainer.addEventListener('focus', function() {
-        if (chatRoomId) {
-            getChatRoom(chatRoomId);
-        }
-    });
-
-    function addChatElement(message) {
-        var chatDiv = document.createElement('div');
-        chatDiv.classList.add('chat-message');
-
-        // 메시지가 사용자 본인의 것인지 여부에 따라 클래스 적용
-        if (message.senderId === userId) {
-            chatDiv.classList.add('my-message');
-        } else {
-            chatDiv.classList.add('other-message');
-        }
-        var senderIdElement = document.createElement('div');
-        senderIdElement.classList.add('message-sender');
-        senderIdElement.textContent = message.senderId;
-
-        var messageTextElement = document.createElement('span');
-        messageTextElement.classList.add('message-text');
-        messageTextElement.textContent = message.messageText;
-        
-        chatDiv.appendChild(senderIdElement);
-        chatDiv.appendChild(messageTextElement);
-        if (message.isRead > 0) { // isRead가 0보다 클때만 안 읽은 수 표시
-            var isReadElement = document.createElement('span');
-            isReadElement.classList.add('message-status');
-            isReadElement.textContent = message.isRead;
-            chatDiv.appendChild(isReadElement);
-        }
-
-        chatRoomDiv.appendChild(chatDiv);
-
-        // Check if the 'Scroll to Bottom' button is currently hidden
-        if (!scrollToBottomButton.classList.contains('show')) {
-            // If hidden, scroll to the bottom
-            chatRoomDiv.scrollTop = chatRoomDiv.scrollHeight;
-        }
-    }
-
-    function sendMessage() {
-        var messageText = document.getElementById('message').value;
-
-        stompClient.send("/app/sendMessage", {}, JSON.stringify({
-                'messageText': messageText,
-                'chatRoomId': chatRoomId,
-                'senderId': userId
-            })
-        );
-        document.getElementById('message').value = '';
-    }
-
-    document.getElementById('messageForm').addEventListener('submit', function(event) {
-        event.preventDefault();
-        sendMessage();
-    });
-    
-    connect();
-
-
-    // 스크롤 관련 function
-    scrollToBottomButton.addEventListener('click', function() {
-        chatRoomDiv.scrollTop = chatRoomDiv.scrollHeight;
-        scrollToBottomButton.classList.remove('show');
-    });
-
-    // Update the logic for the scroll event listener
-    chatRoomDiv.addEventListener('scroll', function() {
-        // If the user scrolls up, disable auto-scroll to bottom
-        if (chatRoomDiv.scrollTop < chatRoomDiv.scrollHeight - chatRoomDiv.clientHeight) {
-            scrollToBottomButton.classList.add('show');
-        } else {
-            // User scrolled to the bottom, re-enable auto-scroll
-            scrollToBottomButton.classList.remove('show');
-        }
-    });
-</script>
-
+<script th:src="@{/js/messenger.js}"></script>
 </body>
 </html>
