--- a/src/main/resources/templates/member/joinForm.html
+++ b/src/main/resources/templates/member/joinForm.html
@@ -199,7 +199,7 @@ function uploadAndPreview() {
     <main>
        <h1>회원가입</h1>
        <!--onsubmit="return checkValid();"-->
-       <form th:action="@{/member/join}" method="post" enctype="multipart/form-data" >
+       <form th:action="@{/member/join}" method="post" enctype="multipart/form-data" onsubmit="return checkValid();">
           <table>
              <tr>
                 <th>아이디</th>
