--- a/src/main/resources/templates/member/updateForm.html
+++ b/src/main/resources/templates/member/updateForm.html
@@ -47,10 +47,7 @@ function checkValid(){
          	alert("주소를 입력하세요.");
          	return false;
       	}
-		if (email.value == '') {
-			alert("메일주소를 입력하세요.");
-			return false;
-		}
+		
 		if (profileImage.value == null) {
 			alert("프로필사진을 등록하세요");
 			return false;
@@ -103,119 +100,10 @@ function checkValid(){
             }
         }).open();
     }
-    //프로필사진 업데이트
-/*   function uploadAndPreview() {
-            var fileInput = document.getElementById('fileInput');
-            var preview = document.getElementById('preview');
-
-            var file = fileInput.files[0];
-            var reader = new FileReader();
-
-            reader.onloadend = function () {
-                preview.src = reader.result;
-            };
-
-            if (file) {
-                reader.readAsDataURL(file);
-
-                // 파일을 서버에 업로드
-                uploadFile(file);
-            } else {
-                preview.src = "#";
-            }
-        }
-
-        function uploadFile(file) {
-            var formData = new FormData();
-            formData.append('file', file);
-
-            fetch('/upload', {
-                method: 'POST',
-                body: formData
-            })
-            .then(response => response.json())
-            .then(data => {
-                console.log('File uploaded:', data.imageUrl);
-                // 여기에서 서버에서 전달한 이미지 URL을 사용하여 추가적인 작업을 수행할 수 있습니다.
-            })
-            .catch(error => {
-                console.error('Error uploading file:', error);
-            });
-        }
-        
-        function setExternalImage() {
-            var imageUrl = 'https://play-lh.googleusercontent.com/38AGKCqmbjZ9OuWx4YjssAz3Y0DTWbiM5HB0ove1pNBq_o9mtWfGszjZNxZdwt_vgHo=w170-h170-rw';
-            var preview = document.getElementById('preview');
-            preview.src = imageUrl;
-        }
-        window.onload = function() {
-            setExternalImage();
-        };*/
-        
-        function updateProfilePicture() {
-    var fileInput = document.getElementById('fileInput');
-    var imageUrlInput = document.getElementById('imageUrlInput');
-    var preview = document.getElementById('preview');
-
-    var file = fileInput.files[0];
-    var imageUrl = imageUrlInput.value;
-
-    if (file) {
-        // 파일이 선택된 경우
-        uploadAndPreview(file);
-    } else if (imageUrl) {
-        // 이미지 URL이 제공된 경우
-        setExternalImage(imageUrl);
-    } else {
-        // 파일도 없고 이미지 URL도 없는 경우
-        preview.src = "#";
-    }
-}
-
-function uploadAndPreview(file) {
-    var reader = new FileReader();
-
-    reader.onloadend = function () {
-        preview.src = reader.result;
-    };
-
-    reader.readAsDataURL(file);
-
-    // 파일을 서버에 업로드
-    uploadFile(file);
-}
-
-function uploadFile(file) {
-    var formData = new FormData();
-    formData.append('file', file);
-
-    fetch('/upload', {
-        method: 'POST',
-        body: formData
-    })
-    .then(response => response.json())
-    .then(data => {
-        console.log('File uploaded:', data.imageUrl);
-        // 서버에서 전달한 이미지 URL을 사용하여 추가 작업 수행
-    })
-    .catch(error => {
-        console.error('Error uploading file:', error);
-    });
-}
-
-function setExternalImage(imageUrl) {
-    preview.src = imageUrl;
-}
-
-window.onload = function() {
-    // 초기 프로필 이미지 설정
-    var initialImageUrl = 'https://play-lh.googleusercontent.com/38AGKCqmbjZ9OuWx4YjssAz3Y0DTWbiM5HB0ove1pNBq_o9mtWfGszjZNxZdwt_vgHo=w170-h170-rw';
-    setExternalImage(initialImageUrl);
-};
-
-//이메일
+   
+    
+     //이메일
       function sendNumber() {
-		  alert('d');
 		  $("#mail_number").css("display", "block");
          console.log("1차통과");
          $.ajax({
@@ -234,17 +122,82 @@ window.onload = function() {
          });
       }
 
+
+
+
       function confirmNumber() {
          var number1 = $("#number").val();
          var number2 = $("#Confirm").val();
-
-         if (number1 == number2) {
+         
+          if (number2 == ""){
+			alert("이메일 인증을 하세요")
+			return false;
+		} if (number1 == number2) {
             alert("인증되었습니다.");
             $("#hid").attr("check", "true");
          } else {
             alert("인증번호가 다릅니다.");
          }
       }
+    
+function checkValid(){
+        let userid = document.querySelector('#userid');
+		let password = document.querySelector('#password');
+		let password2 = document.querySelector('#password2');
+		let name = document.querySelector('#name');
+        let gender = document.querySelector('#gender');
+        let birth = document.querySelector('#birth');
+        let phone = document.querySelector('#phone');
+        let address_postcode = document.querySelector('#address_postcode');
+        let address_address = document.querySelector('#address_address');
+        let email = document.querySelector('#email');
+        let mail_check = $("#hid").attr("check");
+        let hidemail = document.querySelector('#hidemail');
+        
+
+		
+		
+		if (!password.value =='' && password.value.length < 3 || password.value.length > 10) {
+			alert("비밀번호는 3~10자로 입력하세요.");
+			return false;
+		}
+		
+		if (password.value != password2.value) {
+			alert("비밀번호를 정확하게 입력하세요.");
+			return false;
+		}
+		if (phone.value == '') {
+			alert("연락처를 입력하세요.");
+			return false;
+		}
+		if (address_postcode.value == '') {
+         alert("주소를 입력하세요.");
+         return false;
+      	}
+      	if (address_address.value == '') {
+         	alert("주소를 입력하세요.");
+         	return false;
+      	}
+		
+        if (email.value == '') {
+			alert("이메일 인증 하세요!");
+			return false;
+		}
+		if (email.value == hidemail.value) {
+			return true;
+		}
+		if (mail_check == "false") {
+            alert('이메일 인증 하세요');
+            return false;
+        }
+       
+		return true;
+         
+         
+		
+
+    }
+    
 </script>
 
 <body>
@@ -307,7 +260,8 @@ window.onload = function() {
                 <th>이메일</th>
                 <td>
                 <div id="mail_input" name="mail_input">
-                     <input type="text" name="email" id="email" placeholder="이메일 입력">
+                     <input type="text" name="email" id="email" placeholder="이메일 입력" th:value="${member.email}">
+                     <input type="hidden" id="hidemail" th:value="${member.email}">
                      <button type="button" id="sendBtn" name="sendBtn" class="submit2" onclick="sendNumber()">인증번호 받기</button>
                   </div>
                   <br>
@@ -320,6 +274,7 @@ window.onload = function() {
                   <input type="text" id="Confirm" name="Confirm" style="display: none" value="">
                   <input type="hidden" id="hid" check="false">
                   </td>
+                  
           <tr>
              <th>자기소개</th>
              <td>
